# Artificial-intelligence

./: .gitignore  ADVERSARIAL_PROOF_PACK_V1_MANIFEST.json  ADVERSARIAL_PROOF_PACK_V1_REPORT.md  BASELINE_COMPARISON_V1_MANIFEST.json  BASELINE_COMPARISON_V1_REPORT.md  CITATION.cff  COPYRIGHT_NOTICE.md  Dockerfile  LICENSE  LOCAL_DEVELOPMENT_NOTES.md  LOCAL_PROOF_PACK_V1_MANIFEST.json  LOCAL_PROOF_PACK_V1_REPORT.md  Makefile  NEXT_AI_PUBLICATION_NOTE.md  PATENT_NOTICE.md  README.md  RELEASE_MANIFEST_v1.0.md  Untitled1.ipynb  ai_native_coherence_v2.py  artificial intelligence.py  docker-compose.yml  local_adversarial_baseline_comparison_v1.py  local_adversarial_cases_v1.json  local_baseline_comparison.py  local_benchmark_cases.json  local_contract_check.py  local_final_closure_bundle_v2.py  local_full_stack_validator.py  local_integrity_probe_v1.py  local_release_api_validator.py  local_release_controller_validator.py  local_repair_expectations.json  local_repair_validator.py  local_resolution_api_validator.py  local_resolution_validator.py  local_rnke_closure_validator.py  pyproject.toml  requirements.txt
ai_trust_enablement/: README.md  __init__.py  ai_hallucination_recognition_engine.py  api_client.py  batch_evaluator.py  benchmark_cases_v1.json  certificate_schema_v1.json  ci_proof_pack.py  claim_frame_kernel.py  claim_repair_engine.py  ecl_commit_adapter.py  ecl_finality_demo.py  evidence_ledger.py  fusion_certificate_engine.py  future_arrow_operator.py  lambda_laplace_operator.py  local_smoke_suite.py  monti_operator.py  panini_nyaya_claim_verifier.py  paninian_certificate_adapter.py  paninian_meta_engine.py  release_controller.py  retrieval_resolution_engine.py  retrieval_router.py  rnke_closure_engine.py  run_enablement_tests.py  (+4 more)
(+10 files in other folders)
