[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trust-enable"
version = "1.0.0"
description = "AI hallucination recognition and certificate service"
requires-python = ">=3.11"
authors = [{name = "Parveen"}]
dependencies = []

[tool.setuptools]
packages = ["ai_trust_enablement"]

[project.scripts]
ai-trust-evaluate = "ai_trust_enablement.ai_hallucination_recognition_engine:main"
ai-trust-server = "ai_trust_enablement.server:run"
ai-trust-batch = "ai_trust_enablement.batch_evaluator:main"
ai-trust-tests = "ai_trust_enablement.run_enablement_tests:main"
