[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trust-enable"
version = "1.1.9"
description = "AI hallucination recognition and certificate service"
requires-python = ">=3.11"
authors = [{name = "Parveen"}]
dependencies = []

[tool.setuptools]
packages = ["ai_trust_enablement"]

[project.scripts]
ai-trust-evaluate = "ai_trust_enablement.ai_hallucination_recognition_engine:main"
ai-trust-server = "ai_trust_enablement.server:run"
ai-trust-batch = "ai_trust_enablement.batch_evaluator:main"
ai-trust-tests = "ai_trust_enablement.run_enablement_tests:main"
ai-trust-panini = "ai_trust_enablement.paninian_meta_engine:main"
ai-trust-claims = "ai_trust_enablement.panini_nyaya_claim_verifier:main"
ai-trust-frames = "ai_trust_enablement.claim_frame_kernel:main"
ai-trust-fusion = "ai_trust_enablement.fusion_certificate_engine:main"
ai-trust-smoke = "ai_trust_enablement.local_smoke_suite:main"
ai-trust-ci-proof = "ai_trust_enablement.ci_proof_pack:main"
